--- a/index.html
+++ b/index.html
@@ -7,54 +7,10 @@
   <body ng-controller="StoreController as store">
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="product in store.products">
-        <h3 ng-include="'product-title.html'" class="ng-scope">
-          <button class="pull-right price" ng-show="product.canPurchase"> Add to Cart </button>
-        </h3>
+        <h3 product-title></h3>
+        <button class="pull-right price" ng-show="product.canPurchase"> Add to Cart </button>
         <img ng-src="{{product.images[0].full}}"/>
-        <section ng-init="tab = 1" ng-controller="PanelController as panel">
-          <ul class="nav nav-pills">
-            <li ng-class="{ active: panel.isSelected(1) }">
-              <a href ng-click="panel.selectTab(1)">Description</a>
-            </li>
-            <li ng-class="{ active: panel.isSelected(2) }">
-              <a href ng-click="panel.selectTab(2)">Specifications</a>
-            </li>
-            <li ng-class="{ active: panel.isSelected(3) }">
-              <a href ng-click="panel.selectTab(3)">Reviews</a>
-            </li>
-          </ul>
-          <div class="panel" ng-show="panel.isSelected(1)">
-            <h4>Description</h4>
-            <blockquote>{{product.description}}</blockquote>
-          </div>
-          <div class="panel" ng-show="panel.isSelected(2)">
-            <h4>Specifications</h4>
-            <blockquote>None yet</blockquote>
-          </div>
-          <div class="panel" ng-show="panel.isSelected(3)">
-            <form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate>
-              <h4>Reviews</h4>
-              <blockquote ng-repeat="review in product.reviews">
-                <b>{{review.stars}} Stars </b>
-                {{review.body}}<br/>
-                <cite>-{{review.author}}</cite>
-              </blockquote>
-              <select ng-model="reviewCtrl.review.stars" required>
-                <option value="1">1 star</option>
-                <option value="2">2 stars</option>
-                <option value="3">3 stars</option>
-                <option value="4">4 stars</option>
-                <option value="5">5 stars</option>
-              </select>
-              <label>Review:</label>
-              <textarea ng-model="reviewCtrl.review.body" required></textarea>
-              <label>by:</label>
-              <input ng-model="reviewCtrl.review.author" type="email" required />
-              <div> reviewForm is {{reviewForm.$valid}} </div>
-              <input type="submit" value="Submit" />
-            </form>
-          </div>
-        </section>
+        <product-panels ng-init="tab = 1"></product-panels>
       </li>
     </ul>
     {{store.product.name}}
