--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </ul>
     {{store.product.name}}
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.js"></script>
+    <script src="product.js"></script>
   </body>
 </html>
